Fix alignment of ellipsis and address in wallet view.

--- a/ui/app/css/itcss/components/newui-sections.scss
+++ b/ui/app/css/itcss/components/newui-sections.scss
@@ -105,6 +105,7 @@ $wallet-view-bg: $alabaster;
   &__tooltip {
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 24px;
   }
 
